--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
-<!DOCTYPE hyml>
+<!DOCTYPE html>
 <head>
-    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <meta charset = "utf-8">
-    <title>Login / Sign up Form</title>
-    <link rel = "shortcut icon" href = "/assets/favicon.ico">
-    <link rel = "stylesheet" href = ./test2/main.css>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Login / Sign Up Form</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class = "container">
-        <form class = "form" id = "login">
-            <h1 class = "form__title">Login</h1>
-            <div class = "form__message form__message--error">Incorrect username/password combination</h1>
-            <div class = "form__input--group">
-                <input type = "text" class = form__input" autofocus placeholder = "Username or email"> 
-                <div class = "form__input-error-message">This is an error message</div>
+    <div class="container">
+        <form class="form" id="login">
+            <h1 class="form__title">Login</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Username or email">
+                <div class="form__input-error-message"></div>
             </div>
-            <div class = "form__input--group">
-                <input type = "Password" class = form__input" autofocus placeholder = "Password"> 
-                <div class = "form__input-error-message"></div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
             </div>
-            <button class = "form__button" type = "submit">Continue</button>
-            <p class = "form__text">
-                <a  class = "form__link" href = "./" id =  "linkCreateAccount">Create an account</a>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a href="#" class="form__link">Forgot your password?</a>
             </p>
-            <p class = "form__text">
-                <a href = "#" class = "form__link">Forgot password?</a>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkCreateAccount">Create an Account</a>
             </p>
         </form>
-
+        <form class="form form form--hidden" id="createAccount">
+            <h1 class="form__title">Create Account</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+            </p>
+        </form>
     </div>
-    <script src = "./test2/main.js"></script>
+    <script src="main.js"></script>
 </body>
