changed js file name

--- a/index.html
+++ b/index.html
@@ -57,5 +57,5 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-    <script src="main.js"></script>
+    <script src="Login.js"></script>
 </body>
