--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
-    <link rel="stylesheet" href="login/main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div class="container">
