--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
+                <input type="password" id = "signupPassword"class="form__input" autofocus placeholder="Password">
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <input type="password" id = "confirmPassword" class="form__input" autofocus placeholder="Confirm password">
                 <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
@@ -53,6 +53,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-    <script src="./login/main.js"></script>
+    <script src="/login/main.js"></script>
 </body>
  
