--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-    <script src="/login/main.js"></script>
+<script src="./login/main.js"></script>
 </body>
  
