made compatible for other devices

--- a/contactPage.html
+++ b/contactPage.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
 	<title>Contacts Page</title>
 	<link href="contactPage.css" rel="stylesheet">
 
@@ -53,7 +55,8 @@
 				<button id="addContactButton">Add Contact</button>
 			</div>
 		</form>
-	<div class = "buttonParent">
+		<div class = "buttonParent">
+
 		<form class="form">
 			<div class="form__input-group">
 				<button>edit</button>
