--- a/contactPage.html
+++ b/contactPage.html
@@ -188,7 +188,7 @@ function getData() {
 	};
 
 	// send the request with the input JSON as the request body
-	xhr.send(inputJson);
+	request.send(inputJson);
 }
 function makeContactList(){
 	getData();
