--- a/contactPage.html
+++ b/contactPage.html
@@ -170,8 +170,8 @@ function getData() {
 	let request = new XMLHttpRequest();
 	request.open("POST", displayContact);
 	let tmp = {
-		User_Id : "7",
-		User_Name: "mrose"
+		User_Id : "16",
+		User_Name: "user"
 	};
 	console.log(tmp);
 	let inputJSON = JSON.stringify(tmp);
