--- a/contactPage.html
+++ b/contactPage.html
@@ -199,6 +199,7 @@ function makeContactList(){
 }
 </script>
 <script src = "contactPage.js"></script>
+<script src="./login/main.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
