--- a/contactPage.html
+++ b/contactPage.html
@@ -62,37 +62,37 @@
 
 		<form action="/action_page.php">
 			<label>First name:</label>
-			<input class = "detailedInfo" id="detailedFirstName" value="John">
+			<input class = "detailedInfo" id="detailedFirstName" value="">
 			<br>
 			<label>Last name:</label>
-			<input class = "detailedInfo" id="detailedLastName" value="Doe">
+			<input class = "detailedInfo" id="detailedLastName" value="">
 			<br>
 			<label>Email:</label>
-			<input class = "detailedInfo" id="detailedEmail" value="example@email.com">
+			<input class = "detailedInfo" id="detailedEmail" value="">
 			<br>
 			<label>Phone:</label>
-			<input class = "detailedInfo" id="detailedPhone" value="012-345-6789">
+			<input class = "detailedInfo" id="detailedPhone" value="">
 			<br>
 			<label>Street Address:</label>
-			<input class = "detailedInfo" id="street"  value="123 Example Court">
+			<input class = "detailedInfo" id="street"  value="">
 			<br>
 			<label>City:</label>
-			<input class = "detailedInfo" id="city" name="city" value="Orlando">
+			<input class = "detailedInfo" id="city" name="city" value="">
 			<br>
 			<label>State:</label>
-			<input class = "detailedInfo" id="state" name="state" value="FL">
+			<input class = "detailedInfo" id="state" name="state" value="">
 			<br>
 			<label>Zip Code:</label>
-			<input class = "detailedInfo" id="zip" name="zip" value="32817">
+			<input class = "detailedInfo" id="zip" name="zip" value="">
 			<br>
 			<label>Birth Date:</label>
-			<input class = "detailedInfo" id="birth" name="birth" value="2000-01-01">
+			<input class = "detailedInfo" id="birth" name="birth" value="">
 			<br>
 			<label>Date Created:</label>
-			<input class = "detailedInfo" id="created" name="created" value="2023-03-17">
+			<input class = "detailedInfo" id="created" name="created" value="">
 			<br>
 			<label>Last Edited:</label>
-			<input class = "detailedInfo" id="edited" name="edited" value="2023-03-18">
+			<input class = "detailedInfo" id="edited" name="edited" value="">
 		</form>
 		
 		<button id = "editButton" onclick = 'setEditable()'>Edit</button>
