--- a/contactPage.html
+++ b/contactPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width/2, initial-scale=1.0">
     <meta charset="utf-8">
 	<title>Contacts Page</title>
 	<link href="contactPage.css" rel="stylesheet">
