--- a/edituser.html
+++ b/edituser.html
@@ -5,8 +5,10 @@
     <title>Login / Sign Up Form</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
-    <div class="container">
+    <div class="box">
+        <div class="container">
         <form class="form" id="Username">
             <h1 class="form__title">Edit Username</h1>
             <div class="form__message form__message--error"></div>
@@ -32,6 +34,7 @@
             </p>
         </form>
     </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
   function addDarkmodeWidget() {
@@ -40,5 +43,5 @@
   window.addEventListener('load', addDarkmodeWidget);
 </script>
 <script src="edituser.js"></script>
+
 </body>
- 
